--- a/SARS/AvatarSystem.resx
+++ b/SARS/AvatarSystem.resx
@@ -1288,7 +1288,7 @@
     <value>Vertical</value>
   </data>
   <data name="avatarGrid.Size" type="System.Drawing.Size, System.Drawing">
-    <value>840, 453</value>
+    <value>840, 447</value>
   </data>
   <data name="avatarGrid.TabIndex" type="System.Int32, mscorlib">
     <value>2</value>
@@ -2138,10 +2138,10 @@
     <value>6</value>
   </data>
   <data name="metroTabPage2.Location" type="System.Drawing.Point, System.Drawing">
-    <value>4, 38</value>
+    <value>4, 39</value>
   </data>
   <data name="metroTabPage2.Size" type="System.Drawing.Size, System.Drawing">
-    <value>840, 444</value>
+    <value>840, 443</value>
   </data>
   <data name="metroTabPage2.TabIndex" type="System.Int32, mscorlib">
     <value>1</value>
@@ -2186,7 +2186,7 @@
     <value>metroTabPage4</value>
   </data>
   <data name="&gt;&gt;chkUnityPackage.ZOrder" xml:space="preserve">
-    <value>0</value>
+    <value>2</value>
   </data>
   <data name="lblDownload.AutoSize" type="System.Boolean, mscorlib">
     <value>True</value>
@@ -2567,10 +2567,10 @@
     <value>15</value>
   </data>
   <data name="metroTabPage4.Location" type="System.Drawing.Point, System.Drawing">
-    <value>4, 38</value>
+    <value>4, 39</value>
   </data>
   <data name="metroTabPage4.Size" type="System.Drawing.Size, System.Drawing">
-    <value>840, 444</value>
+    <value>840, 443</value>
   </data>
   <data name="metroTabPage4.TabIndex" type="System.Int32, mscorlib">
     <value>3</value>
@@ -3008,7 +3008,7 @@
     <value>Bottom, Right</value>
   </data>
   <data name="btnGetScreenshots.Location" type="System.Drawing.Point, System.Drawing">
-    <value>591, 382</value>
+    <value>591, 380</value>
   </data>
   <data name="btnGetScreenshots.Size" type="System.Drawing.Size, System.Drawing">
     <value>120, 35</value>
@@ -3035,7 +3035,7 @@
     <value>Bottom, Right</value>
   </data>
   <data name="btnScanCacheFolder.Location" type="System.Drawing.Point, System.Drawing">
-    <value>717, 382</value>
+    <value>717, 380</value>
   </data>
   <data name="btnScanCacheFolder.Size" type="System.Drawing.Size, System.Drawing">
     <value>120, 35</value>
@@ -3045,6 +3045,9 @@
   </data>
   <data name="btnScanCacheFolder.Text" xml:space="preserve">
     <value>Scan Cache</value>
+  </data>
+  <data name="btnScanCacheFolder.ToolTip" xml:space="preserve">
+    <value>Scanning the cache will automatically upload the results to the SARS database.</value>
   </data>
   <data name="&gt;&gt;btnScanCacheFolder.Name" xml:space="preserve">
     <value>btnScanCacheFolder</value>
@@ -3068,10 +3071,10 @@
     <value>NoControl</value>
   </data>
   <data name="resource.Location8" type="System.Drawing.Point, System.Drawing">
-    <value>475, 2</value>
+    <value>477, 2</value>
   </data>
   <data name="resource.Size8" type="System.Drawing.Size, System.Drawing">
-    <value>359, 359</value>
+    <value>357, 357</value>
   </data>
   <data name="resource.TabIndex8" type="System.Int32, mscorlib">
     <value>1</value>
@@ -3083,7 +3086,7 @@
     <value>3, 12</value>
   </data>
   <data name="txtCacheScannerLog.Size" type="System.Drawing.Size, System.Drawing">
-    <value>837, 364</value>
+    <value>837, 362</value>
   </data>
   <data name="txtCacheScannerLog.TabIndex" type="System.Int32, mscorlib">
     <value>69</value>
@@ -3635,7 +3638,7 @@
     <value>Bottom</value>
   </data>
   <data name="btnUpdate.Location" type="System.Drawing.Point, System.Drawing">
-    <value>3, 350</value>
+    <value>3, 348</value>
   </data>
   <data name="btnUpdate.Size" type="System.Drawing.Size, System.Drawing">
     <value>191, 35</value>
@@ -3668,17 +3671,17 @@
     <value>True</value>
   </data>
   <data name="metroLabel5.Location" type="System.Drawing.Point, System.Drawing">
-    <value>4, 388</value>
+    <value>4, 386</value>
   </data>
   <data name="metroLabel5.Size" type="System.Drawing.Size, System.Drawing">
-    <value>323, 57</value>
+    <value>917, 57</value>
   </data>
   <data name="metroLabel5.TabIndex" type="System.Int32, mscorlib">
     <value>99</value>
   </data>
   <data name="metroLabel5.Text" xml:space="preserve">
     <value>Get access to this function by donating to SARS
-
+(This function uses the SARS server to download an avatar and then provide you with a link to the avatar so you don't risk your account)
 https://ko-fi.com/ShrekamusChrist</value>
   </data>
   <data name="&gt;&gt;metroLabel5.Name" xml:space="preserve">
@@ -3697,7 +3700,7 @@ https://ko-fi.com/ShrekamusChrist</value>
     <value>Bottom</value>
   </data>
   <data name="btnDownloadSafe.Location" type="System.Drawing.Point, System.Drawing">
-    <value>647, 350</value>
+    <value>647, 348</value>
   </data>
   <data name="btnDownloadSafe.Size" type="System.Drawing.Size, System.Drawing">
     <value>191, 35</value>
@@ -3760,7 +3763,7 @@ https://ko-fi.com/ShrekamusChrist</value>
     <value>Vertical</value>
   </data>
   <data name="dgSafeDownload.Size" type="System.Drawing.Size, System.Drawing">
-    <value>840, 348</value>
+    <value>840, 346</value>
   </data>
   <data name="dgSafeDownload.TabIndex" type="System.Int32, mscorlib">
     <value>3</value>
